[package]
name = "olxer"
version = "0.1.0"
authors = ["Valiantsin Mikhaliuk <valiantsin.mikhaliuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
select = "0.4.3"
prettytable-rs = "^0.8"
clap = "2.33.0"
