[package]
name = "alx"
version = "0.2.0"
authors = ["Valentin Michaluk <valentin.michaluk@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = "0.9.19"
select = "0.4.3"
clap = "2.33.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
time = "*"
slug = "*"
csv = "*"
lazy_static = "1.4.0"
comfy-table = "5.0.0"
